<resources>

    <string name="app_name">Chizmiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="chikana">CHIKA NA!</string>
    <string name="signup">SIGN UP</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="retypePassword"> Re-type Password</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="logo">Logo</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="status">status</string>

    <string name="logout">Logout</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="notif">notif</string>
    <string name="title">title</string>
    <string name="name">"@whatever123"</string>
    <string name="stat">"What's up?"</string>
    <string name="post">"Post it!"</string>
    <string name="profile">"profile"</string>
    <string name="title_activity_profile">Profile</string>
    <string name="desc">"Hi I'm olaf and i like warm hugs"</string>
    <string name="stats">"what a nice movie! i'm gonna watch it again :)"</string>
    <string name="title_activity_notification">Notification</string>
    <string name="chikka">Chikka!</string>
    <string name="title_activity_change_pass">ChangePass</string>
    <string name="changePass">Change Password</string>
    <string name="oldPass">Old Password</string>
    <string name="newPass">New Password</string>
    <string name="redPass">Re-type New Password</string>
    <string name="title_activity_update_account">UpdateAccount</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_notification2">Notification2</string>
    <string name="title_retrieve">Retrieve</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_homepage2">Homepage2</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
</resources>
