<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="640dp" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cobi.tess.activities.ChangePass"
    android:background="#215352">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="CHANGE PASSWORD"
        android:id="@+id/changePass"
        android:textSize="60dp"
        android:gravity="center"
        android:textColor="#ffff00"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/old"
        android:layout_marginTop="109dp"
        android:hint="@string/oldPass"
        android:textColorHint="#FFFFFF"
        android:layout_below="@+id/changePass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="123456" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/newp"
        android:hint="@string/newPass"
        android:textColorHint="#FFFFFF"
        android:layout_below="@+id/old"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/retypeNew"
        android:hint="@string/redPass"
        android:textColorHint="#FFFFFF"
        android:layout_below="@+id/newp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
</ScrollView>