<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"  android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:background="#215352"
    android:orientation="vertical" tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:clickable="false"
        android:layout_margin="10dp"
        android:src="@drawable/lo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:layout_above="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="0dp"
        android:textSize="30px"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="0dp"
        android:textSize="30px"
        android:layout_above="@+id/textView2"
        android:layout_weight="0"
        android:textColor="#ffffffff"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d1f444"
        android:onClick="homepage"
        android:text="@string/chikana"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="#215352" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up for Chizmiz"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:onClick="signUp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fffdfffb"
        android:textSize="15dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0.13" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/forgotPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fffff8fc"
        android:textSize="15dp"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="retrievepassword"/>
</LinearLayout>
