<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cobi.tess.activities.Register"
    android:background="#215352"
    android:weightSum="1">

    <TextView
        android:id="@+id/name"
        android:layout_width="329dp"
        android:layout_height="81dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="REGISTER"
        android:textColor="#d1f444"
        android:textSize="70dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="0.10"
        android:gravity="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email Address"
        android:padding="10dp"
        android:textColorHint="#FFFFFF" />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF">
        <requestFocus />
    </EditText>


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="10dp"
        android:textColorHint="#FFFFFF" />




    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="RetypePassword"
        android:padding="10dp"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:padding="10dp"
        android:layout_weight="0.48"
        android:gravity="top"
        android:textColorHint="#FFFFFF">


    </EditText>

</LinearLayout>
